Engine/Data/out/c/events.h

// Header for loading an audio file. Variable data (path string) follows.
typedef struct {
    uint32_t pathLength; // Length of the audio file path that follows.
} PackedAudioLoadEvent;
// Payload sent *from* engine *to* client when audio is loaded.
typedef struct {
    uint64_t audioId; // The ID assigned to the loaded audio.
} PackedAudioLoadedEvent;
// Payload to pause a specific, playing audio sound.
typedef struct {
    uint64_t audioId; // The ID of the audio to pause.
} PackedAudioPauseEvent;
// Payload to play a loaded audio file.
typedef struct {
    uint64_t audioId; // The ID of the audio to play.
} PackedAudioPlayEvent;
// Payload to set the global master volume.
typedef struct {
    float volume; // Volume level (e.g., 0.0 to 1.0).
} PackedAudioSetMasterVolumeEvent;
// Payload to set the volume of a specific audio sound.
typedef struct {
    uint64_t audioId; // The ID of the audio to modify.
    float volume; // Volume level (0.0 to 1.0).
    uint32_t _padding; // Padding for alignment.
} PackedAudioSetVolumeEvent;
// Stops all playing audio. This event has no payload.
typedef struct {
    uint8_t _unused; // Padding to ensure non-zero struct size (MSVC compatibility).
} PackedAudioStopAllEvent;
// Payload to stop and rewind a specific audio sound.
typedef struct {
    uint64_t audioId; // The ID of the audio to stop.
} PackedAudioStopEvent;
// Payload to unload a specific audio sound, freeing memory.
typedef struct {
    uint64_t audioId; // The ID of the audio to unload.
} PackedAudioUnloadEvent;
// Tells the camera to start following a specific entity.
typedef struct {
    int64_t id1; // Primary ID of the entity to follow.
    int64_t id2; // Secondary ID of the entity to follow.
} PackedCameraFollowEntityEvent;
// Payload to move the 2D camera by a relative delta.
typedef struct {
    double deltaX; // Amount to move the camera on the X axis.
    double deltaY; // Amount to move the camera on the Y axis.
} PackedCameraMoveEvent;
// Payload to set the 2D camera's absolute world position.
typedef struct {
    double positionX; // New X position for the camera's top-left corner.
    double positionY; // New Y position for the camera's top-left corner.
} PackedCameraSetPositionEvent;
// Payload to set the 2D camera's rotation.
typedef struct {
    double angleInRadians; // New camera rotation in radians.
} PackedCameraSetRotationEvent;
// Payload to set the 2D camera's zoom level.
typedef struct {
    double zoom; // New zoom level. 1.0 is default, 2.0 is zoomed in.
} PackedCameraSetZoomEvent;
// Tells the camera to stop following any entity.
typedef struct {
    uint8_t _unused; // Padding to ensure non-zero struct size (MSVC compatibility).
} PackedCameraStopFollowingEvent;
// Payload for adding a single geometry line.
typedef struct {
    int64_t id1; // Primary identifier.
    int64_t id2; // Secondary identifier.
    double z; // Z position (depth).
    uint8_t r; // Red color component (0-255).
    uint8_t g; // Green color component (0-255).
    uint8_t b; // Blue color component (0-255).
    uint8_t a; // Alpha color component (0-255).
    uint8_t isScreenSpace; // If the geometry is unaffected by the camera.
    uint8_t _padding[3]; // Padding for alignment.
    float x1; // Start X coordinate.
    float y1; // Start Y coordinate.
    float x2; // End X coordinate.
    float y2; // End Y coordinate.
} PackedGeomAddLineEvent;
// Header for adding a batch of geometry primitives. Variable data (array of points/rects) follows.
typedef struct {
    int64_t id1; // Primary identifier.
    int64_t id2; // Secondary identifier.
    double z; // Z position (depth).
    uint8_t r; // Red color component (0-255).
    uint8_t g; // Green color component (0-255).
    uint8_t b; // Blue color component (0-255).
    uint8_t a; // Alpha color component (0-255).
    uint8_t isScreenSpace; // If the geometry is unaffected by the camera.
    uint16_t _padding; // Padding for alignment.
    uint32_t primitiveType; // Raw value from PrimitiveType enum (point, line, rect).
    uint32_t count; // Number of primitives that follow this header.
} PackedGeomAddPackedHeaderEvent;
// Payload for adding a single geometry point.
typedef struct {
    int64_t id1; // Primary identifier.
    int64_t id2; // Secondary identifier.
    double z; // Z position (depth).
    uint8_t r; // Red color component (0-255).
    uint8_t g; // Green color component (0-255).
    uint8_t b; // Blue color component (0-255).
    uint8_t a; // Alpha color component (0-255).
    uint8_t isScreenSpace; // If the geometry is unaffected by the camera.
    uint8_t _padding[3]; // Padding for alignment.
    float x; // X coordinate.
    float y; // Y coordinate.
} PackedGeomAddPointEvent;
// Payload for adding a geometry rectangle (outline).
typedef struct {
    int64_t id1; // Primary identifier.
    int64_t id2; // Secondary identifier.
    double z; // Z position (depth).
    uint8_t r; // Red color component (0-255).
    uint8_t g; // Green color component (0-255).
    uint8_t b; // Blue color component (0-255).
    uint8_t a; // Alpha color component (0-255).
    uint8_t isScreenSpace; // If the geometry is unaffected by the camera.
    uint8_t _padding[3]; // Padding for alignment.
    float x; // Top-left X coordinate.
    float y; // Top-left Y coordinate.
    float w; // Width.
    float h; // Height.
} PackedGeomAddRectEvent;
// Payload for removing a geometry entity.
typedef struct {
    int64_t id1; // Primary ID of geometry to remove.
    int64_t id2; // Secondary ID of geometry to remove.
} PackedGeomRemoveEvent;
// Payload to set a geometry entity's color.
typedef struct {
    int64_t id1; // Primary ID of the geometry entity.
    int64_t id2; // Secondary ID of the geometry entity.
    uint8_t r; // New red component (0-255).
    uint8_t g; // New green component (0-255).
    uint8_t b; // New blue component (0-255).
    uint8_t a; // New alpha component (0-255).
    uint32_t _padding; // Padding for alignment.
} PackedGeomSetColorEvent;
// Payload for a key release event.
typedef struct {
    int32_t scancode; // Physical key scancode.
    uint32_t keycode; // Keycode (e.g., Keycode.A).
    uint16_t mod; // Key modifiers (Shift, Ctrl, etc.).
    uint8_t isRepeat; // 1 if this is a key repeat, 0 otherwise.
    uint8_t _padding; // Padding for alignment.
} PackedKeyEvent;
// Payload for a mouse button release event.
typedef struct {
    float x; // X coordinate of the mouse.
    float y; // Y coordinate of the mouse.
    uint8_t button; // Mouse button index.
    uint8_t clicks; // Number of clicks (1 for single, 2 for double).
    uint16_t _padding; // Padding for alignment.
} PackedMouseButtonEvent;
// Payload for a mouse motion event.
typedef struct {
    float x; // Absolute X coordinate.
    float y; // Absolute Y coordinate.
    float xrel; // Relative X motion.
    float yrel; // Relative Y motion.
} PackedMouseMotionEvent;
// Payload for adding a new physics body to the world.
typedef struct {
    int64_t id1; // Primary identifier.
    int64_t id2; // Secondary identifier.
    double positionX; // Initial X position.
    double positionY; // Initial Y position.
    uint8_t bodyType; // Body type (static, kinematic, dynamic).
    uint8_t shapeType; // Shape type (box, circle).
    uint8_t lockRotation; // Rotation lock (0 = unlocked, 1 = locked). Prevent bodies from falling over.
    uint8_t _padding[5]; // Padding for 8-byte alignment.
    double mass; // Mass of the body.
    double friction; // Friction coefficient.
    double elasticity; // Elasticity (bounciness).
    double width; // Width of the shape (or radius).
    double height; // Height of the shape (unused if circle).
} PackedPhysicsAddBodyEvent;
// Payload to apply a continuous force to a body.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double forceX; // Force vector X component.
    double forceY; // Force vector Y component.
} PackedPhysicsApplyForceEvent;
// Payload to apply an instant impulse to a body.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double impulseX; // Impulse vector X component.
    double impulseY; // Impulse vector Y component.
} PackedPhysicsApplyImpulseEvent;
// Payload sent *from* engine when two bodies begin colliding.
typedef struct {
    int64_t id1_A; // Primary ID of the first body.
    int64_t id2_A; // Secondary ID of the first body.
    int64_t id1_B; // Primary ID of the second body.
    int64_t id2_B; // Secondary ID of the second body.
} PackedPhysicsCollisionEvent;
// Payload for removing a physics body.
typedef struct {
    int64_t id1; // Primary ID of body to remove.
    int64_t id2; // Secondary ID of body to remove.
} PackedPhysicsRemoveBodyEvent;
// Payload to toggle physics debug rendering.
typedef struct {
    uint8_t enabled; // 1 to enable debug drawing, 0 to disable.
    uint8_t _padding[3]; // Padding for 4-byte alignment.
} PackedPhysicsSetDebugModeEvent;
// Payload to teleport a body to a new position.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double positionX; // New X position.
    double positionY; // New Y position.
} PackedPhysicsSetPositionEvent;
// Payload to set a body's rotation.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double angleInRadians; // New angle in radians.
} PackedPhysicsSetRotationEvent;
// Payload to set a body's linear velocity.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double velocityX; // New X velocity.
    double velocityY; // New Y velocity.
} PackedPhysicsSetVelocityEvent;
// Payload sent *from* engine to sync 2D physics state back to client.
typedef struct {
    int64_t id1; // Primary ID of the body.
    int64_t id2; // Secondary ID of the body.
    double positionX; // Current X position.
    double positionY; // Current Y position.
    double angle; // Current rotation (in radians).
    double velocityX; // Current X velocity.
    double velocityY; // Current Y velocity.
    double angularVelocity; // Current angular velocity (spin speed) in radians/sec.
    uint8_t isSleeping; // 1 if the body is sleeping, 0 if active.
    uint8_t _padding[7]; // Aligns struct to 64-bit boundary.
} PackedPhysicsSyncTransformEvent;
// Payload to enable or disable plugin event stacking.
typedef struct {
    uint8_t eventId; // 1 to enable stacking, 0 to disable.
    uint8_t _padding; // Padding for alignment.
} PackedPluginEventStackingEvent;
// Header for loading a plugin. Variable data (path string) follows.
typedef struct {
    uint32_t channelNo; // Initial Channel number to receive events from. Look at channel subscription event to listen to more than one channel.
    uint32_t pathLength; // Length of the plugin file path that follows.
} PackedPluginLoadHeaderEvent;
// Payload for a generic plugin 'on' event.
typedef struct {
    uint8_t eventId; // A custom event ID for the plugin.
} PackedPluginOnEvent;
// Payload to set the active plugin.
typedef struct {
    uint8_t pluginId; // ID of the plugin to set as active.
} PackedPluginSetEvent;
// Have events from a channel forward to this plugin
typedef struct {
    uint8_t pluginId; // ID of the plugin.
    uint8_t _padding[3]; // Padding for alignment.
    uint32_t channelNo; // Channel number to receive events from.
} PackedPluginSubscribeEvent;
// Payload to unload a plugin.
typedef struct {
    uint8_t pluginId; // ID of the plugin to unload.
} PackedPluginUnloadEvent;
// Have events from a channel forward to this plugin
typedef struct {
    uint8_t pluginId; // ID of the plugin.
    uint8_t _padding[3]; // Padding for alignment.
    uint32_t channelNo; // Channel number to stop receiving events from.
} PackedPluginUnsubscribeEvent;