Engine/Data/out/zig/phrost.zig

// !!! THIS FILE IS AUTO-GENERATED BY ZigAdapter.php, DO NOT EDIT !!!
// Generated from: structs.json

const std = @import("std");

pub const Events = enum(u32) {
    spriteAdd = 0,
    spriteRemove = 1,
    spriteMove = 2,
    spriteScale = 3,
    spriteResize = 4,
    spriteRotate = 5,
    spriteColor = 6,
    spriteSpeed = 7,
    spriteTextureLoad = 8,
    spriteTextureSet = 9,
    spriteSetSourceRect = 10,
    geomAddPoint = 50,
    geomAddLine = 51,
    geomAddRect = 52,
    geomAddFillRect = 53,
    geomAddPacked = 54,
    geomRemove = 55,
    geomSetColor = 56,

    inputKeyup = 100,
    inputKeydown = 101,
    inputMouseup = 102,
    inputMousedown = 103,
    inputMousemotion = 104,

    windowTitle = 200,
    windowResize = 201,
    windowFlags = 202,

    textAdd = 300,
    textSetString = 301,

    audioLoad = 400,
    audioLoaded = 401,
    audioPlay = 402,
    audioStopAll = 403,
    audioSetMasterVolume = 404,
    audioPause = 405,
    audioStop = 406,
    audioUnload = 407,
    audioSetVolume = 408,

    physicsAddBody = 500,
    physicsRemoveBody = 501,
    physicsApplyForce = 502,
    physicsApplyImpulse = 503,
    physicsSetVelocity = 504,
    physicsSetPosition = 505,
    physicsSetRotation = 506,
    physicsCollisionBegin = 550,
    physicsCollisionSeparate = 551,
    physicsSyncTransform = 552,
    physicsSetDebugMode = 553,

    plugin = 1000,
    pluginLoad = 1001,
    pluginUnload = 1002,
    pluginSet = 1003,
    pluginEventStacking = 1004,
    pluginSubscribeEvent = 1005,
    pluginUnsubscribeEvent = 1006,

    cameraSetPosition = 2000,
    cameraMove = 2001,
    cameraSetZoom = 2002,
    cameraSetRotation = 2003,
    cameraFollowEntity = 2004,
    cameraStopFollowing = 2005,

    scriptSubscribe = 3000,
    scriptUnsubscribe = 3001,

    uiBeginWindow = 4000,
    uiEndWindow = 4001,
    uiText = 4002,
    uiButton = 4003,
    uiSetNextWindowPos = 4004,
    uiSetNextWindowSize = 4005,
    uiElementClicked = 4500,
    uiWindowClosed = 4501,
};

pub const PackedAudioLoadEvent = extern struct {
    pathLength: u32, // Length of the audio file path that follows.
};

pub const PackedAudioLoadedEvent = extern struct {
    audioId: u64, // The ID assigned to the loaded audio.
};

pub const PackedAudioPauseEvent = extern struct {
    audioId: u64, // The ID of the audio to pause.
};

pub const PackedAudioPlayEvent = extern struct {
    audioId: u64, // The ID of the audio to play.
};

pub const PackedAudioSetMasterVolumeEvent = extern struct {
    volume: f32, // Volume level (e.g., 0.0 to 1.0).
};

pub const PackedAudioSetVolumeEvent = extern struct {
    audioId: u64, // The ID of the audio to modify.
    volume: f32, // Volume level (0.0 to 1.0).
    _padding: u32, // Padding for alignment.
};

pub const PackedAudioStopAllEvent = extern struct {
    _unused: u8, // Padding to ensure non-zero struct size (MSVC compatibility).
};

pub const PackedAudioStopEvent = extern struct {
    audioId: u64, // The ID of the audio to stop.
};

pub const PackedAudioUnloadEvent = extern struct {
    audioId: u64, // The ID of the audio to unload.
};

pub const PackedCameraFollowEntityEvent = extern struct {
    id1: i64, // Primary ID of the entity to follow.
    id2: i64, // Secondary ID of the entity to follow.
};

pub const PackedCameraMoveEvent = extern struct {
    deltaX: f64, // Amount to move the camera on the X axis.
    deltaY: f64, // Amount to move the camera on the Y axis.
};

pub const PackedCameraSetPositionEvent = extern struct {
    positionX: f64, // New X position for the camera's top-left corner.
    positionY: f64, // New Y position for the camera's top-left corner.
};

pub const PackedCameraSetRotationEvent = extern struct {
    angleInRadians: f64, // New camera rotation in radians.
};

pub const PackedCameraSetZoomEvent = extern struct {
    zoom: f64, // New zoom level. 1.0 is default, 2.0 is zoomed in.
};

pub const PackedCameraStopFollowingEvent = extern struct {
    _unused: u8, // Padding to ensure non-zero struct size (MSVC compatibility).
};

pub const PackedGeomAddLineEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    z: f64, // Z position (depth).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    isScreenSpace: u8, // If the geometry is unaffected by the camera.
    _padding: [3]u8, // Padding for alignment.
    x1: f32, // Start X coordinate.
    y1: f32, // Start Y coordinate.
    x2: f32, // End X coordinate.
    y2: f32, // End Y coordinate.
};

pub const PackedGeomAddPackedHeaderEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    z: f64, // Z position (depth).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    isScreenSpace: u8, // If the geometry is unaffected by the camera.
    _padding: u16, // Padding for alignment.
    primitiveType: u32, // Raw value from PrimitiveType enum (point, line, rect).
    count: u32, // Number of primitives that follow this header.
};

pub const PackedGeomAddPointEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    z: f64, // Z position (depth).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    isScreenSpace: u8, // If the geometry is unaffected by the camera.
    _padding: [3]u8, // Padding for alignment.
    x: f32, // X coordinate.
    y: f32, // Y coordinate.
};

pub const PackedGeomAddRectEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    z: f64, // Z position (depth).
    r: u8, // Red color component (0-255).
    g: u8, // Green color component (0-255).
    b: u8, // Blue color component (0-255).
    a: u8, // Alpha color component (0-255).
    isScreenSpace: u8, // If the geometry is unaffected by the camera.
    _padding: [3]u8, // Padding for alignment.
    x: f32, // Top-left X coordinate.
    y: f32, // Top-left Y coordinate.
    w: f32, // Width.
    h: f32, // Height.
};

pub const PackedGeomRemoveEvent = extern struct {
    id1: i64, // Primary ID of geometry to remove.
    id2: i64, // Secondary ID of geometry to remove.
};

pub const PackedGeomSetColorEvent = extern struct {
    id1: i64, // Primary ID of the geometry entity.
    id2: i64, // Secondary ID of the geometry entity.
    r: u8, // New red component (0-255).
    g: u8, // New green component (0-255).
    b: u8, // New blue component (0-255).
    a: u8, // New alpha component (0-255).
    _padding: u32, // Padding for alignment.
};

pub const PackedKeyEvent = extern struct {
    scancode: i32, // Physical key scancode.
    keycode: u32, // Keycode (e.g., Keycode.A).
    mod: u16, // Key modifiers (Shift, Ctrl, etc.).
    isRepeat: u8, // 1 if this is a key repeat, 0 otherwise.
    _padding: u8, // Padding for alignment.
};

pub const PackedMouseButtonEvent = extern struct {
    x: f32, // X coordinate of the mouse.
    y: f32, // Y coordinate of the mouse.
    button: u8, // Mouse button index.
    clicks: u8, // Number of clicks (1 for single, 2 for double).
    _padding: u16, // Padding for alignment.
};

pub const PackedMouseMotionEvent = extern struct {
    x: f32, // Absolute X coordinate.
    y: f32, // Absolute Y coordinate.
    xrel: f32, // Relative X motion.
    yrel: f32, // Relative Y motion.
};

pub const PackedPhysicsAddBodyEvent = extern struct {
    id1: i64, // Primary identifier.
    id2: i64, // Secondary identifier.
    positionX: f64, // Initial X position.
    positionY: f64, // Initial Y position.
    bodyType: u8, // Body type (static, kinematic, dynamic).
    shapeType: u8, // Shape type (box, circle).
    lockRotation: u8, // Rotation lock (0 = unlocked, 1 = locked). Prevent bodies from falling over.
    _padding: [5]u8, // Padding for 8-byte alignment.
    mass: f64, // Mass of the body.
    friction: f64, // Friction coefficient.
    elasticity: f64, // Elasticity (bounciness).
    width: f64, // Width of the shape (or radius).
    height: f64, // Height of the shape (unused if circle).
};

pub const PackedPhysicsApplyForceEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    forceX: f64, // Force vector X component.
    forceY: f64, // Force vector Y component.
};

pub const PackedPhysicsApplyImpulseEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    impulseX: f64, // Impulse vector X component.
    impulseY: f64, // Impulse vector Y component.
};

pub const PackedPhysicsCollisionEvent = extern struct {
    id1_A: i64, // Primary ID of the first body.
    id2_A: i64, // Secondary ID of the first body.
    id1_B: i64, // Primary ID of the second body.
    id2_B: i64, // Secondary ID of the second body.
};

pub const PackedPhysicsRemoveBodyEvent = extern struct {
    id1: i64, // Primary ID of body to remove.
    id2: i64, // Secondary ID of body to remove.
};

pub const PackedPhysicsSetDebugModeEvent = extern struct {
    enabled: u8, // 1 to enable debug drawing, 0 to disable.
    _padding: [3]u8, // Padding for 4-byte alignment.
};

pub const PackedPhysicsSetPositionEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    positionX: f64, // New X position.
    positionY: f64, // New Y position.
};

pub const PackedPhysicsSetRotationEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    angleInRadians: f64, // New angle in radians.
};

pub const PackedPhysicsSetVelocityEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    velocityX: f64, // New X velocity.
    velocityY: f64, // New Y velocity.
};

pub const PackedPhysicsSyncTransformEvent = extern struct {
    id1: i64, // Primary ID of the body.
    id2: i64, // Secondary ID of the body.
    positionX: f64, // Current X position.
    positionY: f64, // Current Y position.
    angle: f64, // Current rotation (in radians).
    velocityX: f64, // Current X velocity.
    velocityY: f64, // Current Y velocity.
    angularVelocity: f64, // Current angular velocity (spin speed) in radians/sec.
    isSleeping: u8, // 1 if the body is sleeping, 0 if active.
    _padding: [7]u8, // Aligns struct to 64-bit boundary.
};

pub const PackedPluginEventStackingEvent = extern struct {
    eventId: u8, // 1 to enable stacking, 0 to disable.
    _padding: u8, // Padding for alignment.
};

pub const PackedPluginLoadHeaderEvent = extern struct {
    channelNo: u32, // Initial Channel number to receive events from. Look at channel subscription event to listen to more than one channel.
    pathLength: u32, // Length of the plugin file path that follows.
};

pub const PackedPluginOnEvent = extern struct {
    eventId: u8, // A custom event ID for the plugin.
};

pub const PackedPluginSetEvent = extern struct {
    pluginId: u8, // ID of the plugin to set as active.
};

pub const PackedPluginSubscribeEvent = extern struct {
    pluginId: u8, // ID of the plugin.
    _padding: [3]u8, // Padding for alignment.
    channelNo: u32, // Channel number to receive events from.
};

pub const PackedPluginUnloadEvent = extern struct {
    pluginId: u8, // ID of the plugin to unload.
};

pub const PackedPluginUnsubscribeEvent = extern struct {
    pluginId: u8, // ID of the plugin.
    _padding: [3]u8, // Padding for alignment.
    channelNo: u32, // Channel number to stop receiving events from.
};
